--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="row">
                         <div class="brand">
                             <div class="logoo">
-                                <a href="index.html">
+                                <a href="https://magicolr.com/">
                                     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 111.8 111.8">
                                         <path d="M69.9 99.9h-2.4L41.2 40.1v59.8h-2.5V36.2h3.5l.1.2 26.4 60.1 26.5-60.3h3.5v55.6c8.2-9.7 13.1-22.2 13.1-35.9C111.8 25.1 86.7 0 55.9 0S0 25.1 0 55.9s25.1 55.9 55.9 55.9c15.8 0 30.1-6.6 40.3-17.2V40.1L69.9 99.9z" />
                                     </svg>
@@ -155,7 +155,7 @@
             <div class="container">
                 <div class="col-md-12 col-sm-12">
                     <div class="logooSmall">
-                        <a href="index.html">
+                        <a href="https://magicolr.com/">
                             <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 111.8 111.8" enable-background="new 0 0 111.8 111.8" xml:space="preserve">
                                 <g>
                                     <path d="M69.9,99.9h-2.4L41.2,40.1v59.8h-2.5V36.2h3.5l0.1,0.2l26.4,60.1l26.5-60.3h3.5v55.6c8.2-9.7,13.1-22.2,13.1-35.9
