--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         </div>
                         <p>The idea behind this is to create a Summer Melon Icon with Illustrator in 60 seconds. After this I saved it as an SVG file so it can be viewed in any browser.</p>
                   		<picture>
-                        		<img src="https://github.com/PascalMontsma/melon/blob/main/Melon%20Preview.png?raw=true" alt="Melon Preview" width="40%">
+                        		<img src="https://github.com/PascalMontsma/melon/blob/main/Melon%20Preview.png?raw=true" alt="Melon Preview">
                     		</picture>
 			</div>
                 </div>
